fix(a11y): correct repository aria-labels, trim skill badge spaces, fix CSS :not notation, remove duplicate main tags

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                   <i data-lucide="mic" class="project-icon"></i>
                   <div class="project-links">
                     <span class="live-badge" style="background: var(--primary);">v0.2.0</span>
-                    <a href="https://github.com/mithivoices/ai-voice-platform" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/mithivoices/ai-voice-platform" target="_blank" rel="noopener noreferrer" aria-label="View source on GitHub — mithivoices/ai-voice-platform"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Creator &amp; Maintainer</div>
@@ -537,7 +537,7 @@
                   <i data-lucide="search" class="project-icon"></i>
                   <div class="project-links">
                     <span class="live-badge" style="background: var(--primary);">NEW</span>
-                    <a href="https://github.com/Aryanpanwar10005/seo-geo-optimizer" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005/seo-geo-optimizer" target="_blank" rel="noopener noreferrer" aria-label="View source on GitHub — seo-geo-optimizer"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Creator &amp; Maintainer</div>
@@ -567,7 +567,7 @@
                 <div class="project-header-top">
                   <i data-lucide="zap" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="https://github.com/Aryanpanwar10005/wireless_ev_charging" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005/wireless_ev_charging" target="_blank" rel="noopener noreferrer" aria-label="View source on GitHub — wireless_ev_charging"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Sep – Nov 2025</div>
@@ -593,7 +593,7 @@
                 <div class="project-header-top">
                   <i data-lucide="lightbulb" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="https://github.com/Aryanpanwar10005/smart_staircase_lighting_system" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005/smart_staircase_lighting_system" target="_blank" rel="noopener noreferrer" aria-label="View source on GitHub — smart_staircase_lighting_system"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Oct – Nov 2024</div>
@@ -659,8 +659,8 @@
             </div>
             <p class="skill-card-desc">Designing low-level systems and robust circuit architectures.</p>
             <div class="skill-badges">
-              <span class="skill-badge"> Embedded C/C++</span>
-              <span class="skill-badge"> Arduino (C/C++)</span>
+              <span class="skill-badge">Embedded C/C++</span>
+              <span class="skill-badge">Arduino (C/C++)</span>
               <span class="skill-badge">8051 Family</span>
               <span class="skill-badge">ARM MCU</span>
               <span class="skill-badge">UART / I2C</span>
@@ -683,7 +683,7 @@
             </div>
             <p class="skill-card-desc">Bridging hardware with intelligent processing.</p>
             <div class="skill-badges">
-              <span class="skill-badge"> Python</span>
+              <span class="skill-badge">Python</span>
               <span class="skill-badge">On-Device AI</span>
               <span class="skill-badge">Edge AI</span>
               <span class="skill-badge">Machine Learning</span>
@@ -773,11 +773,11 @@
             </div>
             <p class="skill-card-desc">Core languages used for full-stack and embedded development.</p>
             <div class="skill-badges">
-              <span class="skill-badge"> Python</span>
-              <span class="skill-badge"> JavaScript</span>
-              <span class="skill-badge"> TypeScript</span>
-              <span class="skill-badge"> Embedded C/C++</span>
-              <span class="skill-badge"> Arduino (C/C++)</span>
+              <span class="skill-badge">Python</span>
+              <span class="skill-badge">JavaScript</span>
+              <span class="skill-badge">TypeScript</span>
+              <span class="skill-badge">Embedded C/C++</span>
+              <span class="skill-badge">Arduino (C/C++)</span>
             </div>
           </div>
 
@@ -874,7 +874,6 @@
     </main>
 
     <!-- Footer -->
-    </main>
   <footer>
       <div class="container footer-content">
         <div class="footer-socials">
