perf(images): convert project thumbnails to WebP, fix aria-labels, improve contrast
- Convert 6 project images from PNG/JPG to WebP (avg 80% size reduction):
  seo-geo-optimizer: 729KB→72KB, fitwardrobe: 132KB→27KB
- Standardize all project image dimensions to 600×400 in index.html
- Fix missing aria-labels on FitWardrobe live link, Autonomous Robot GitHub link,
  'Explore Complete Archive' CTA button, and all 3 blog article read links
- Fix generic 'GitHub Profile' aria-label on Autonomous Robot project card
- Improve role-badge text contrast: #7b2fbe→#b47ee8 to pass WCAG 4.5:1 ratio
- Add descriptive alt text to robot.png image

Addresses: PageSpeed Insights round 2 accessibility and performance issues

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             <!-- FitWardrobe -->
             <div class="project-card">
               <div class="project-thumbnail">
-                <img src="assets/projects/fitwardrobe.jpg" alt="FitWardrobe App - Privacy-first AI Fashion Stylist Android Application" loading="lazy" width="600" height="400">
+                <img src="assets/projects/fitwardrobe.webp" alt="FitWardrobe App - Privacy-first AI Fashion Stylist Android Application" loading="lazy" width="600" height="400">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -480,7 +480,7 @@
                   <div class="project-links">
                     <span class="live-badge">v1.0.1</span>
                     <span class="live-badge">LIVE</span>
-                    <a href="https://fitwardrobe.me" target="_blank" rel="noopener noreferrer"><i data-lucide="external-link"></i></a>
+                    <a href="https://fitwardrobe.me" target="_blank" rel="noopener noreferrer" aria-label="Visit FitWardrobe app website"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Founder &amp; Product Lead</div>
@@ -501,7 +501,7 @@
             <!-- Mithivoices -->
             <div class="project-card">
               <div class="project-thumbnail">
-                <img src="assets/projects/mithivoices.png" alt="Mithivoices - Open-source AI Voice Platform and TTS/STT Engine" loading="lazy" width="600" height="400">
+                <img src="assets/projects/mithivoices.webp" alt="Mithivoices - Open-source AI Voice Platform and TTS/STT Engine" loading="lazy" width="600" height="400">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -529,7 +529,7 @@
             <!-- SEO & GEO Optimizer Skill -->
             <div class="project-card">
               <div class="project-thumbnail">
-                <img src="assets/projects/seo-geo-optimizer.png" alt="SEO & GEO Optimizer - AI Skill for IDEs like Cursor and Windsurf" loading="lazy" width="800" height="600">
+                <img src="assets/projects/seo-geo-optimizer.webp" alt="SEO & GEO Optimizer - AI Skill for IDEs like Cursor and Windsurf" loading="lazy" width="600" height="400">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -560,7 +560,7 @@
             <!-- EV Charging -->
             <div class="project-card">
               <div class="project-thumbnail">
-                <img src="assets/projects/evcharger.png" alt="Wireless EV Charging System - Arduino-based IPT Power Transfer" loading="lazy" width="600" height="400">
+                <img src="assets/projects/evcharger.webp" alt="Wireless EV Charging System - Arduino-based IPT Power Transfer" loading="lazy" width="600" height="400">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -586,7 +586,7 @@
             <!-- Smart Staircase -->
             <div class="project-card">
               <div class="project-thumbnail">
-                <img src="assets/projects/staircase.png" alt="Smart Staircase Lighting - Motion-activated Energy Efficient System" loading="lazy" width="600" height="400">
+                <img src="assets/projects/staircase.webp" alt="Smart Staircase Lighting - Motion-activated Energy Efficient System" loading="lazy" width="600" height="400">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -610,14 +610,14 @@
             <!-- Autonomous Robot -->
             <div class="project-card">
               <div class="project-thumbnail">
-                <img src="assets/projects/robot.png" alt="Autonomous Robot Preview" loading="lazy">
+                <img src="assets/projects/robot.webp" alt="Autonomous Robot - Edge-avoiding robot with ultrasonic sensor arrays" loading="lazy" width="600" height="400">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
                 <div class="project-header-top">
                   <i data-lucide="bot" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" aria-label="View GitHub profile — Aryanpanwar10005"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <h3>Autonomous Robot</h3>
@@ -634,7 +634,7 @@
         </div>
 
         <div class="project-cta">
-          <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="GitHub Profile">
+          <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Explore complete GitHub archive — Aryanpanwar10005">
             Explore Complete Archive
           </a>
         </div>
@@ -801,7 +801,7 @@
                 <div class="project-header-top">
                   <i data-lucide="book-open" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="blog/technical-seo-for-ai-products.html"><i data-lucide="external-link"></i></a>
+                    <a href="blog/technical-seo-for-ai-products.html" aria-label="Read article — Technical SEO for AI Products"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
                 <h3>Technical SEO for AI Products</h3>
@@ -819,7 +819,7 @@
                 <div class="project-header-top">
                   <i data-lucide="book-open" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="blog/building-llm-orchestration-tools.html"><i data-lucide="external-link"></i></a>
+                    <a href="blog/building-llm-orchestration-tools.html" aria-label="Read article — Building LLM Orchestration Tools"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
                 <h3>Building LLM Orchestration Tools</h3>
@@ -837,7 +837,7 @@
                 <div class="project-header-top">
                   <i data-lucide="book-open" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="blog/what-is-agentic-ai-developer.html"><i data-lucide="external-link"></i></a>
+                    <a href="blog/what-is-agentic-ai-developer.html" aria-label="Read article — What is an Agentic AI Developer?"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
                 <h3>What is an Agentic AI Developer?</h3>
