SEO refinements: Refactored links to root-relative, optimized metadata, and fixed 404 title length.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta
       name="description"
-      content="Gen AI Engineer and AI Product Manager specializing in LLM orchestration, on-device AI, and embedded systems. Built FitWardrobe (privacy-first AI app) and Mithivoices (open-source voice platform). MIET Meerut ECE graduate."
+      content="Gen AI Engineer & AI Product Manager specializing in LLM orchestration, on-device AI, and embedded systems. Creator of FitWardrobe and Mithivoices."
     />
     <meta
       name="keywords"
