--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found | Aryan Panwar</title>
+    <title>404 Error: Page Not Found | Aryan Panwar - Gen AI Engineer Portfolio</title>
     <meta name="description" content="The page you are looking for does not exist. Return to Aryan Panwar's portfolio.">
     
     <!-- Favicons -->
@@ -46,6 +46,7 @@
             margin: 0;
             background: linear-gradient(135deg, var(--primary), #818cf8);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: 800;
             line-height: 1;
